Bugfixes and new LanguageManager with global Placeholders